--- a/e1_1/pom.xml
+++ b/e1_1/pom.xml
@@ -6,7 +6,21 @@
 
     <groupId>com.endava</groupId>
     <artifactId>e1_1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>
+                org.springframework
+            </groupId>
+
+            <artifactId>spring-context
+            </artifactId>
+
+            <version>5.1.5.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 
 
 </project>
